# vgui-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  clear.bat  run.bat  submodule_update.bat
runtime/: README.md
scripts/: bin_copy.py  steam_app_info.py
src/: CMainFrame.cpp  CMainFrame.h  CMainPanel.cpp  CMainPanel.h  main.cpp
